# llm-finetuning-review

./: .gitignore  README.md  pyproject.toml
1_Transformer_Models/: chapter1_3__Transformers_what_can_they_do.ipynb
Concepts/: Transformer.ipynb  bigram_language_model.py  bigram_language_model__with_decoder.py  bigram_language_model__with_self_attention.py  bigram_language_model__with_self_attention_head.py  pytorch-advanced.ipynb  transformer.py  transformer_dev.py  trigram_language_model.py
Concepts/GPT2/: gpt2_test.ipynb  train_gpt2.py
Concepts/Transformer-from-Scratch/: Transformer.ipynb  bigram_language_model__with_decoder.py  bigram_language_model__with_multi_head_attention.py  bigram_language_model__with_self_attention.py  bigram_language_model__with_self_attention_head.py
tasks/: text_classification.ipynb
